<resources>
    <string name="app_name">ToDo-2do</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search your item here..</string>
    <string name="task_dateTime">Date Time</string>
    <string name="taskTitle">Task Title</string>
    <string name="Task_Date_status">Date status</string>
    <string name="emptyList">No Task to preview</string>
    <string name="img_desc">Blank Image</string>
    <string name="question">What is to be done?</string>
    <string name="task_hint">Pay Bills</string>
    <string name="due_date">Due Date</string>
    <string name="calendar">calendar</string>
    <string name="clock">Clock</string>
    <string name="notifications">Notifications</string>
    <string name="summary">Day Summary on the same day at 8:00.</string>
    <string name="descNotify">Individual notification on time.</string>
    <string name="repeat">Repeat</string>

    <string-array name="repeatItems">
        <item>Once a Month</item>
        <item>Once a week</item>
        <item>Once a day</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="task_priority">Task Priority</string>
    <string name="low_prior">LOW</string>
    <string name="medium_prior">MEDIUM</string>
    <string name="high_prior">HIGH</string>
    <string name="save_Title">Save</string>
</resources>
