<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/dateSts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Task_Date_status"
        android:textColor="@color/colorPrimary"/>

    <android.support.v7.widget.CardView
        android:id="@+id/cvDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/chkTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="5dp"
                android:text="@string/taskTitle" />

            <TextView
                android:id="@+id/txtDateTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/chkTask"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:paddingLeft="32dp"
                android:paddingRight="5dp"
                android:text="@string/task_dateTime"
                android:textColor="@color/colorPrimary" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>